# tgcalls

./: README.md  readme.md
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/tgcalls/: CHANGELOG.md  README.md  pubspec.yaml
package/tgcalls/test/: tgcalls_test.dart
package/tgcalls_dart/: pubspec.yaml
package/tgcalls_dart/ios/packagex/: .gitignore
package/tgcalls_dart/lib/: tgcalls_dart.dart
package/tgcalls_dart/linux/packagex/DEBIAN/: postinst
package/tgcalls_dart/test/: tgcalls_dart_test.dart
package/tgcalls_flutter/: README.md  ffigen.yaml  pubspec.yaml
package/tgcalls_flutter/android/: build.gradle  settings.gradle
package/tgcalls_flutter/android/src/main/: AndroidManifest.xml
package/tgcalls_flutter/example/: README.md  pubspec.yaml
package/tgcalls_flutter/example/android/app/: build.gradle
package/tgcalls_flutter/example/ios/Runner/: Info.plist
package/tgcalls_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
package/tgcalls_flutter/example/lib/: main.dart
package/tgcalls_flutter/example/linux/: CMakeLists.txt  my_application.cc
package/tgcalls_flutter/example/linux/flutter/: generated_plugins.cmake
package/tgcalls_flutter/example/linux/packagex/DEBIAN/: control  postinst
package/tgcalls_flutter/example/macos/Runner.xcodeproj/: project.pbxproj
package/tgcalls_flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
package/tgcalls_flutter/example/windows/: CMakeLists.txt
package/tgcalls_flutter/example/windows/flutter/: generated_plugins.cmake
package/tgcalls_flutter/example/windows/packagex/: .gitignore
package/tgcalls_flutter/example/windows/runner/: Runner.rc  main.cpp
package/tgcalls_flutter/ios/: tgcalls_flutter.podspec
package/tgcalls_flutter/ios/Classes/: tgcalls_flutter.cpp
package/tgcalls_flutter/linux/: CMakeLists.txt
package/tgcalls_flutter/linux/packagex/DEBIAN/: postinst
package/tgcalls_flutter/macos/: tgcalls_flutter.podspec
package/tgcalls_flutter/macos/Classes/: tgcalls_flutter.cpp
package/tgcalls_flutter/src/: CMakeLists.txt
package/tgcalls_flutter/windows/: CMakeLists.txt
package/tgcalls_flutter/windows/packagex/: .gitignore
(+4 files in other folders)
